@@ -1,3 +1,11 @@
+2004-12-22  Dieter Baron  <dillo@danbala.tuwien.ac.at>
+
+	* lib/zip.h: rename zip_read_func to zip_source_callback, struct
+	zip_cmd to struct zip_source_cmd, and ZIP_CMD_* to ZIP_SOURCE_*;
+	adapt users.
+	
+	* lib/zip_open.c (_zip_checkcons): always initialize variables
+
 2004-12-22  Thomas Klausner <wiz@danbala.tuwien.ac.at>
 
 	* zip.h: Rename zip_error_sys_type to zip_error_get_sys_type.
